--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,22 @@ server:
   contextPath: /SpringBootApp
 datasource:
   springbootapp:
-    url: jdbc:mysql://127.0.0.1:3306/ihub
+    url: jdbc:h2:mem:example-app;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    platform: h2
     username: root
     password: root
     driverClassName: com.mysql.jdbc.Driver
     defaultSchema:
-    maxPoolSize: 20
+    maxPoolSize: 5
     hibernate:
       hbm2ddl.method: update
       show_sql: true
       format_sql: true
-      dialect: org.hibernate.dialect.MySQLDialect  
+      dialect: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+      path: /console
+      settings:
+        trace: false
+        web-allow-others: false
